--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav-items a:link,
