--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,9 @@ body {
   border-radius: 10px;
   width: 400px;
   height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .child {
